--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
                             <p class="attention-getter" data-animate-el>
                                 I am a Software Engineering Student in the 6th Semester at the Virtual University of Pakistan.
 Currently, I am learning Web Development With Python.
-I am a passionate learner looking for an Internship as a Front End Developer or Python Developer.
-Outside of tech, I love sports, especially Football, Cricket, and Volleyball
+I am a passionate learner looking for an Internship as a Front End Developer.
                             </p>
                             <a href="https://drive.google.com/file/d/1WeC24mT7HaVF5gGvXuP3nuUBCLFpHvMQ/view?usp=drive_link" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
 
@@ -180,9 +179,9 @@ Outside of tech, I love sports, especially Football, Cricket, and Volleyball
                                     <ul>
                                         <li>Html5</li>
                                         <li>CSS3</li>
-                                        <li>JS</li>
+                                        <li>JavaScript</li>
                                         <li>Python</li>
-                                        <li>C++</li>
+                                
                                     </ul>
                                     <!-- <h4 class="timeline__title">Dropbox</h3>
                                     <h5 class="timeline__meta">Product Designer</h5>
