--- a/index.html
+++ b/index.html
@@ -633,9 +633,9 @@ I am a passionate learner looking for an Internship as a Front End Developer.
         <footer class="s-footer">
 
             <div class="row">
-                <div class="column ss-copyright">
-                    <span>Design by <a href="https://www.styleshout.com/">StyleShout</a> Distribution By <a href="https://themewagon.com">Themewagon</a></span>
-                </div>
+               <!-- <div class="column ss-copyright">
+                   <span>Design by <a href="https://www.styleshout.com/">StyleShout</a> Distribution By <a href="https://themewagon.com">Themewagon</a></span>
+                </div> -->
 
                 <div class="ss-go-top">
                     <a class="smoothscroll" title="Back to Top" href="#top">
@@ -656,3 +656,4 @@ I am a passionate learner looking for an Internship as a Front End Developer.
 
 </body>
 </html>
+
