--- a/index.html
+++ b/index.html
@@ -134,9 +134,7 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                I am a Software Engineering Student in the 6th Semester at the Virtual University of Pakistan.
-Currently, I am learning Web Development With Python.
-I am a passionate learner looking for an Internship as a Front End Developer.
+                                I am a 7th-semester Software Engineering student at the Virtual University of Pakistan, currently learning Front-End Development. As a passionate learner, I am seeking an internship opportunity as a Front-End/Web Developer to apply and grow my skills.
                             </p>
                             <a href="https://drive.google.com/file/d/1WeC24mT7HaVF5gGvXuP3nuUBCLFpHvMQ/view?usp=drive_link" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
 
@@ -656,4 +654,5 @@ I am a passionate learner looking for an Internship as a Front End Developer.
 
 </body>
 </html>
+
 
