--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                             <li>JavaScript</li>
                             <li>Python</li>
                             <li>Front End Developer</li>
+                            <li>Gen Ai</li>
                         </ul>
 
                     </div>
@@ -179,6 +180,8 @@
                                         <li>CSS3</li>
                                         <li>JavaScript</li>
                                         <li>Python</li>
+                                        <li>Front End Developer</li>
+                                        <li>Gen Ai</li>
                                 
                                     </ul>
                                     <!-- <h4 class="timeline__title">Dropbox</h3>
@@ -222,7 +225,7 @@
                                     <p class="timeline__timeframe">May 2026</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>I'm Studying BS in Software Engineering at Virtual University of Pakistan. Currently I'm in 6th semester.</p>
+                                    <p>I'm Studying BS in Software Engineering at Virtual University of Pakistan. Currently I'm in 7th semester.</p>
                                 </div>
                             </div>
     
@@ -654,5 +657,6 @@
 
 </body>
 </html>
+
 
 
